detailpage_리뷰, 상세보기, 옵션 선택 수정 완료

--- a/app/src/main/res/layout/detailpage_activity_main_obtion_select.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_obtion_select.xml
@@ -9,17 +9,15 @@
 
     <View
         android:id="@+id/view"
-        android:layout_width="0dp"
+        android:layout_width="411dp"
         android:layout_height="368dp"
-        android:layout_marginTop="245dp"
-        android:layout_marginBottom="65dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginBottom="63dp"
         android:background="#8E8BD8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.widget.Button
         android:id="@+id/btn_color_select"
@@ -45,12 +43,12 @@
 
     <android.widget.Button
         android:id="@+id/btn_color"
-        android:layout_width="0dp"
+        android:layout_width="386dp"
         android:layout_height="52dp"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="250dp"
+        android:layout_marginTop="364dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="315dp"
         android:background="#FFFFFFFF"
         android:gravity="center"
         android:text="검정"
@@ -59,19 +57,17 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.303" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.widget.Button
         android:id="@+id/btn_size_select"
-        android:layout_width="0dp"
+        android:layout_width="386dp"
         android:layout_height="52dp"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="255dp"
+        android:layout_marginTop="364dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="315dp"
         android:background="#FFFFFFFF"
         android:drawableRight="@drawable/detailpage_under_icon_xml"
         android:gravity="center"
@@ -81,19 +77,17 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.401" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.widget.Button
         android:id="@+id/btn_size_S"
-        android:layout_width="0dp"
+        android:layout_width="386dp"
         android:layout_height="52dp"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="245dp"
+        android:layout_marginTop="419dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="260dp"
         android:background="#FFFFFFFF"
         android:gravity="center"
         android:text="S"
@@ -102,19 +96,17 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.811" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.widget.Button
         android:id="@+id/btn_size_M"
-        android:layout_width="0dp"
+        android:layout_width="386dp"
         android:layout_height="52dp"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="190dp"
+        android:layout_marginTop="474dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="205dp"
         android:background="#FFFFFFFF"
         android:gravity="center"
         android:text="M"
@@ -123,19 +115,17 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.868" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <android.widget.Button
         android:id="@+id/btn_size_L"
-        android:layout_width="0dp"
+        android:layout_width="386dp"
         android:layout_height="52dp"
         android:layout_marginStart="13dp"
-        android:layout_marginTop="9dp"
-        android:layout_marginEnd="13dp"
-        android:layout_marginBottom="133dp"
+        android:layout_marginTop="529dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="150dp"
         android:background="#FFFFFFFF"
         android:gravity="center"
         android:text="L"
@@ -143,17 +133,14 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.895" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <android.widget.Button
         android:id="@+id/btn_option"
-        android:layout_width="415dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="616dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:background="#8E8BD8"
         android:text="옵션 선택 닫기"
         android:textColor="#FFFFFFFF"
@@ -163,17 +150,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/top_toorbar" />
 
     <View
         android:id="@+id/top_toorbar"
         android:layout_width="0dp"
-        android:layout_height="53dp"
+        android:layout_height="0dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:layout_marginBottom="614dp"
         android:background="#FFFFFF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btn_option"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
