--- a/app/src/main/res/layout/seller_activity_main.xml
+++ b/app/src/main/res/layout/seller_activity_main.xml
@@ -9,87 +9,46 @@
     android:orientation="vertical">
 
     <Button
+        android:id="@+id/btn_mypage"
+        android:layout_width="100dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="20dp"
+        android:text="마이페이지"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.083"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+    <Button
         android:id="@+id/btn_manager"
         android:layout_width="100dp"
         android:layout_height="46dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
         android:text="관리자"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.123"
+        app:layout_constraintHorizontal_bias="0.948"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/btn_seller"
-        android:layout_width="100dp"
-        android:layout_height="46dp"
-        android:layout_marginLeft="190dp"
-        android:layout_marginTop="16dp"
-        android:text="판매자"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.123"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/btn_setting"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="310dp"
-        android:layout_marginTop="23dp"
-        android:background="@drawable/mypage_btn_setting"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.041"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/btn_shopping_basket"
-        android:layout_width="46dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="14dp"
-        android:layout_marginLeft="340dp"
-        android:background="@drawable/mypage_btn_shopping_basket"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-    <ImageView
-        android:id="@+id/user_image"
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/mypage_user_icon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.093"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="140dp"
-        android:layout_marginTop="125dp"
-        android:text="홍길동"
+        android:layout_gravity="center"
+        android:layout_marginTop="26dp"
+        android:text="판매자"
         android:textColor="@color/black"
+        android:textSize="22sp"
         android:textStyle="bold"
-        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.029"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
     <Button
-        android:id="@+id/btn_order_delivery_list"
+        android:id="@+id/btn_product_list"
         android:layout_width="411dp"
         android:layout_height="70dp"
         android:layout_marginTop="35dp"
@@ -97,16 +56,33 @@
         android:gravity="left"
         android:paddingLeft="20dp"
         android:paddingTop="20dp"
-        android:text="주문/배송 내역"
+        android:text="물품 목록"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/user_image"
+        app:layout_constraintTop_toBottomOf="@+id/header_title"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/btn_product_register"
+        android:layout_width="411dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="5dp"
+        android:background="#00FF0000"
+        android:gravity="left"
+        android:paddingLeft="20dp"
+        android:paddingTop="20dp"
+        android:text="물품 등록 요청"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_product_list"
         tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <Button
-        android:id="@+id/btn_refund_exchange_list"
+        android:id="@+id/btn_product_revise"
         android:layout_width="411dp"
         android:layout_height="70dp"
         android:layout_marginTop="5dp"
@@ -114,16 +90,16 @@
         android:gravity="left"
         android:paddingLeft="20dp"
         android:paddingTop="20dp"
-        android:text="환불/교환 내역"
+        android:text="물품 수정 요청"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_order_delivery_list"
+        app:layout_constraintTop_toBottomOf="@+id/btn_product_register"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <Button
-        android:id="@+id/btn_review_write"
+        android:id="@+id/btn_product_delete"
         android:layout_width="411dp"
         android:layout_height="70dp"
         android:layout_marginTop="5dp"
@@ -131,13 +107,12 @@
         android:gravity="left"
         android:paddingLeft="20dp"
         android:paddingTop="20dp"
-        android:text="후기 작성"
+        android:text="물품 삭제"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_refund_exchange_list"
+        app:layout_constraintTop_toBottomOf="@+id/btn_product_revise"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
