--- a/app/src/main/res/layout/manager_item_product_register.xml
+++ b/app/src/main/res/layout/manager_item_product_register.xml
@@ -96,7 +96,7 @@
         android:layout_marginTop="20dp"
         android:background="@color/main"
         android:padding="4dp"
-        android:text="등록"
+        android:text="확인"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
