--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,9 +21,13 @@
         <item name="android:textColor">#8E8BD8</item>
     </style>
 
-    <style name="register">
+    <style name="order_inquiry">
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#000000</item>
     </style>
 
+    <style name="register">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#000000</item>
+    </style>
 </resources>
