--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -70,6 +70,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="카테고리"
+                        android:layout_marginStart="20dp"
                         />
 
                 </LinearLayout>
@@ -131,7 +132,7 @@
                         android:layout_width="10dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginStart="14dp"
+                        android:layout_marginStart="25dp"
                         android:layout_marginEnd="14dp"
                         android:text="상의" />
 
@@ -173,7 +174,7 @@
                         android:id="@+id/textView26"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginEnd="-16"
+                        android:layout_marginEnd="-10dp"
                         android:layout_weight="1"
                         android:text="신발" />
                 </LinearLayout>
@@ -182,36 +183,104 @@
                     android:layout_width="match_parent"
                     android:layout_height="108dp"
                     android:layout_gravity="start|top"
-                    android:layout_marginTop="159dp"
+                    android:layout_marginTop="180dp"
                     android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/btn_top4_id"
                         android:layout_width="73dp"
-                        android:layout_height="134dp"
-                        android:layout_marginEnd="8dp"
-                        android:background="@android:color/transparent"
+                        android:layout_height="match_parent"
+                        android:background="@color/black"
+                        android:layout_marginHorizontal="30dp"
                         android:contentDescription="My Button Description" />
 
                     <Button
                         android:id="@+id/btn_top5_id"
-                        android:layout_width="60dp"
-                        android:layout_height="66dp"
-                        android:layout_marginEnd="8dp"
-                        android:background="@android:color/transparent"
+                        android:layout_width="73dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/black"
+                        android:layout_marginHorizontal="30dp"
                         android:contentDescription="My Button Description" />
 
                     <Button
                         android:id="@+id/btn_top6_id"
-                        android:layout_width="60dp"
-                        android:layout_height="66dp"
-                        android:layout_marginEnd="8dp"
-                        android:background="@android:color/transparent"
+                        android:layout_width="73dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="30dp"
+                        android:background="@color/black"
                         android:contentDescription="My Button Description" />
 
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_gravity="start|top"
+                    android:layout_marginTop="288dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView15"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="35dp"
+                        android:text="상품1" />
+
+                    <TextView
+                        android:id="@+id/textView16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="25dp"
+                        android:text="상품2" />
+
+                    <TextView
+                        android:id="@+id/textView17"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="30dp"
+                        android:text="상품3" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_gravity="start|top"
+                    android:layout_marginTop="308dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView18"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="30dp"
+                        android:text="10000원" />
+
+                    <TextView
+                        android:id="@+id/textView19"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="30dp"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/textView20"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="30dp"
+                        android:text="TextView" />
+                </LinearLayout>
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -223,29 +292,93 @@
 
                     <Button
                         android:id="@+id/btn_top10_id"
-                        android:layout_width="60dp"
-                        android:layout_height="66dp"
-                        android:layout_marginEnd="8dp"
-                        android:background="@android:color/transparent"
+                        android:layout_width="73dp"
+                        android:layout_height="match_parent"
+                        android:background="@color/black"
+                        android:layout_marginHorizontal="30dp"
                         android:contentDescription="My Button Description" />
 
                     <Button
                         android:id="@+id/btn_top11_id"
-                        android:layout_width="60dp"
-                        android:layout_height="66dp"
-                        android:layout_marginEnd="8dp"
-                        android:background="@android:color/transparent"
+                        android:layout_width="73dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="30dp"
+                        android:background="@color/black"
                         android:contentDescription="My Button Description" />
 
                     <Button
                         android:id="@+id/btn_top12_id"
-                        android:layout_width="60dp"
-                        android:layout_height="66dp"
-                        android:layout_marginEnd="8dp"
-                        android:background="@android:color/transparent"
+                        android:layout_width="73dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginHorizontal="30dp"
+                        android:background="@color/black"
                         android:contentDescription="My Button Description" />
+                </LinearLayout>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_gravity="start|top"
+                    android:layout_marginTop="478dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/textView27"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="30dp"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/textView28"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="30dp"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/textView29"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="30dp"
+                        android:text="TextView" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:layout_gravity="start|top"
+                    android:layout_marginTop="498dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView30"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="30dp"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/textView31"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="30dp"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/textView32"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="30dp"
+                        android:text="TextView" />
                 </LinearLayout>
 
             </FrameLayout>
