--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="category_main_color">#8E8BD8</color>
     <color name="category_text_color">#636363</color>
     <color name="category_background_color">#F4F4F4</color>
+    <color name="shopping_basket_background_color">#F3F3F3</color>
     <color name="category_light_gray_color">#E5E5E5</color>
     <color name="main">#9089DE</color>
 
