--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -78,6 +78,7 @@
         android:background="@drawable/input_button"
         android:ems="10"
         android:hint=" 아이디"
+        android:paddingLeft="20dp"
         android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,6 +113,7 @@
         android:background="@drawable/input_button"
         android:ems="10"
         android:hint=" 비밀번호"
+        android:paddingLeft="20dp"
         android:inputType="text"
         app:layout_constraintBottom_toTopOf="@+id/btn_login"
         app:layout_constraintEnd_toEndOf="parent"
