--- a/app/src/main/res/layout/manager_item_product_revise.xml
+++ b/app/src/main/res/layout/manager_item_product_revise.xml
@@ -21,6 +21,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/sellerName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.041"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/date" />
+
     <ImageView
         android:id="@+id/productImage"
         android:layout_width="80dp"
@@ -30,7 +40,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.051"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
+        app:layout_constraintTop_toBottomOf="@+id/sellerName" />
 
     <TextView
         android:id="@+id/productName"
@@ -45,7 +55,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/productImage"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
+        app:layout_constraintTop_toBottomOf="@+id/sellerName" />
 
 
     <TextView
@@ -90,7 +100,7 @@
 
 
     <Button
-        android:id="@+id/btn_product_revise"
+        android:id="@+id/btn_product_register"
         android:layout_width="360dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
