--- a/app/src/main/res/layout/seller_item_order.xml
+++ b/app/src/main/res/layout/seller_item_order.xml
@@ -7,47 +7,37 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+
     <TextView
-        android:id="@+id/date"
+        android:id="@+id/order_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:text=""
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.041"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/sellerName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.041"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/date" />
 
     <ImageView
         android:id="@+id/productImage"
         android:layout_width="80dp"
         android:layout_height="100dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:src="@drawable/mypage_clothes"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.051"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sellerName" />
+        app:layout_constraintTop_toBottomOf="@+id/order_date" />
 
     <TextView
-        android:id="@+id/productName"
+        android:id="@+id/order_productName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="60dp"
         android:text=""
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -55,64 +45,51 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/productImage"
-        app:layout_constraintTop_toBottomOf="@+id/sellerName" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/productSize"
+        android:id="@+id/textTrackingNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
-        android:text=""
-        android:textColor="#575757"
-        android:textSize="18sp"
+        android:layout_marginTop="16dp"
+        android:text="운송장 번호"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/productImage"
-        app:layout_constraintTop_toBottomOf="@+id/productName" />
+        app:layout_constraintTop_toBottomOf="@+id/order_productName" />
 
     <TextView
-        android:id="@+id/slashSeparator"
+        android:id="@+id/order_trackingNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="/"
-        android:textColor="#575757"
-        android:textSize="18sp"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="16dp"
+        android:text=""
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/productSize"
-        app:layout_constraintTop_toBottomOf="@+id/productName" />
-
-    <TextView
-        android:id="@+id/productQuantify"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text=""
-        android:textColor="#575757"
-        android:textSize="18sp"
-        app:layout_constraintStart_toEndOf="@+id/slashSeparator"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productName"
-        app:layout_constraintHorizontal_bias="0.0" />
-
+        app:layout_constraintStart_toEndOf="@+id/textTrackingNumber"
+        app:layout_constraintTop_toBottomOf="@+id/order_productName" />
 
     <Button
-        android:id="@+id/btn_product_register"
+        android:id="@+id/btn_deliveryCheck"
         android:layout_width="360dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:background="@color/main"
         android:padding="4dp"
-        android:text="확인"
+        android:text="배송 조회"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/productImage" />
 
