--- a/app/src/main/res/layout/detailpage_activity_main_ask.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_ask.xml
@@ -38,7 +38,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="80dp"
@@ -72,7 +71,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
-
     <View
         android:id="@+id/search_btn"
         android:layout_width="28dp"
@@ -104,7 +102,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/top_toorbar"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <android.widget.Button
         android:id="@+id/btn_buy"
@@ -152,7 +149,6 @@
                 android:layout_marginTop="20dp"
                 android:src="@drawable/category_ad" />
 
-
             <View
                 android:id="@+id/view2"
                 android:layout_width="match_parent"
@@ -161,17 +157,16 @@
                 android:layout_marginBottom="5dp"
                 android:background="@color/white" />
 
-
             <ImageView
-                android:id="@+id/ellipse_1"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:layout_above="@id/view2"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="365dp"
-                android:layout_marginBottom="-40dp"
-                android:src="@drawable/category_ad"
-                />
+            android:id="@+id/ellipse_1"
+            android:layout_width="38dp"
+            android:layout_height="38dp"
+            android:layout_above="@id/view2"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="365dp"
+            android:layout_marginBottom="-40dp"
+            android:src="@drawable/category_ad"
+            />
 
             <TextView
                 android:id="@+id/brandText"
@@ -231,8 +226,7 @@
                 android:layout_marginBottom="-27dp"
                 android:text="배송정보"
                 android:textColor="#8E8BD8"
-                android:textSize="13sp"/>
-
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/deliveryText2"
@@ -254,7 +248,7 @@
                 android:layout_marginBottom="-55dp"
                 android:text="출발예정"
                 android:textColor="#8E8BD8"
-                android:textSize="13sp"/>
+                android:textSize="13sp" />
 
             <TextView
                 android:id="@+id/scheduleText2"
@@ -275,7 +269,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginBottom="-75dp"
                 android:text="베송 출발 이후 배송 기간은 2~3일이 소요됩니다."
-                android:textSize="10sp"/>
+                android:textSize="10sp" />
 
             <View
                 android:id="@+id/view5"
@@ -283,22 +277,24 @@
                 android:layout_height="35dp"
                 android:layout_below="@id/view4"
                 android:background="@color/white" />
+
             <Button
                 android:id="@+id/productBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="37dp"
+                android:layout_below="@id/view4"
                 android:layout_marginStart="0dp"
                 android:background="#00ff0000"
-                android:text="상품정보"
-                android:layout_below="@id/view4"/>
+                android:text="상품정보" />
+
             <Button
                 android:id="@+id/reviewBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="37dp"
+                android:layout_below="@id/view4"
                 android:layout_marginStart="110dp"
                 android:background="#00ff0000"
-                android:text="리뷰"
-                android:layout_below="@id/view4"/>
+                android:text="리뷰" />
 
             <Button
                 android:id="@+id/sizeBtn"
@@ -313,10 +309,10 @@
                 android:id="@+id/askBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="37dp"
+                android:layout_below="@id/view4"
                 android:layout_marginStart="320dp"
                 android:background="#00ff0000"
-                android:text="문의"
-                android:layout_below="@id/view4"/>
+                android:text="문의" />
 
             <View
                 android:id="@+id/view7"
@@ -324,105 +320,62 @@
                 android:layout_height="35dp"
                 android:layout_below="@id/view6"
                 android:layout_marginBottom="5dp"
-                android:background="@color/white"/>
+                android:background="@color/white" />
 
             <View
                 android:id="@+id/view6"
                 android:layout_width="90dp"
                 android:layout_height="3dp"
                 android:layout_above="@id/view5"
-                android:layout_marginStart="110dp"
+                android:layout_marginStart="316dp"
                 android:layout_marginTop="40dp"
-                android:layout_marginBottom="-36dp"
+                android:layout_marginBottom="-37dp"
                 android:background="#8E8BD8" />
 
             <View
                 android:id="@+id/view8"
                 android:layout_width="match_parent"
-                android:layout_height="102dp"
+                android:layout_height="300dp"
                 android:layout_below="@id/view7"
-                android:background="@color/white"
-                android:layout_marginBottom="5dp"/>
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="258dp"
-                android:layout_height="20dp"
-                android:layout_above="@id/view8"
-                android:layout_marginStart="25dp"
-                android:layout_marginBottom="-25dp"
-                android:text="96%가 만족한 상품이에요."
-                android:textColor="#FF000000" />
+                android:layout_marginTop="3dp"
+                android:background="@color/white" />
 
             <Button
-                android:id="@+id/allReviewBtn"
-                android:layout_width="100dp"
-                android:layout_height="20dp"
+                android:id="@+id/askProductBtn"
+                android:layout_width="match_parent"
+                android:layout_height="82dp"
                 android:layout_above="@id/view8"
-                android:layout_marginStart="300dp"
-                android:layout_marginBottom="-25dp"
-                android:background="#00ff0000"
-                android:textColor="#8E8BD8"
-                android:text="리뷰 전체 보기 >" />
+                android:layout_marginBottom="-122dp"
+                android:drawableRight="@drawable/detailpage_q_icon_xml"
+                android:text="상품에 관련된 궁금한 점을 물어주세요!"
+                android:textColor="#FF000000"
+                android:textSize="15sp" />
 
-            <ImageView
-                android:id="@+id/review1"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+            <Button
+                android:id="@+id/askOrdertBtn"
+                android:layout_width="match_parent"
+                android:layout_height="82dp"
                 android:layout_above="@id/view8"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="330dp"
-                android:layout_marginBottom="-100dp"
-                android:src="@drawable/category_ad"
-                />
+                android:layout_marginBottom="-213dp"
 
-            <ImageView
-                android:id="@+id/review2"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_above="@id/view8"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="250dp"
-                android:layout_marginBottom="-100dp"
-                android:src="@drawable/category_ad"
-                />
 
-            <ImageView
-                android:id="@+id/review3"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_above="@id/view8"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="170dp"
-                android:layout_marginBottom="-100dp"
-                android:src="@drawable/category_ad"
-                />
+                android:drawableRight="@drawable/detailpage_q_icon_xml"
+                android:text="주문에 관련된 궁금한 점을 물어주세요!"
+                android:textColor="#FF000000"
+                android:textSize="15sp" />
 
-            <ImageView
-                android:id="@+id/review4"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_above="@id/view8"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="90dp"
-                android:layout_marginBottom="-100dp"
-                android:src="@drawable/category_ad"
-                />
+                android:layout_marginStart="12dp"
+                android:layout_marginBottom="-35dp"
+                android:text="어떤 점이 궁금하신가요?"
+                android:textColor="#FF000000"
+                android:textSize="17sp" />
 
-            <ImageView
-                android:id="@+id/review5"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_above="@id/view8"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="-100dp"
-                android:src="@drawable/category_ad"
-                />
 
         </RelativeLayout>
     </ScrollView>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
