--- a/app/src/main/res/layout/detailpage_activity_main_size.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_size.xml
@@ -38,7 +38,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="80dp"
@@ -72,7 +71,6 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
-
     <View
         android:id="@+id/search_btn"
         android:layout_width="28dp"
@@ -104,7 +102,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/top_toorbar"
         app:layout_constraintTop_toTopOf="parent" />
-
 
     <android.widget.Button
         android:id="@+id/btn_buy"
@@ -161,7 +158,6 @@
                 android:layout_marginBottom="5dp"
                 android:background="@color/white" />
 
-
             <ImageView
                 android:id="@+id/ellipse_1"
                 android:layout_width="38dp"
@@ -203,6 +199,17 @@
                 android:textColor="#FF000000" />
 
             <TextView
+                android:id="@+id/deliveryText2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@id/view4"
+                android:layout_marginStart="70dp"
+                android:layout_marginBottom="-27dp"
+                android:text="마켓 직접 배송(우체국 택배)"
+                android:textColor="#FF000000"
+                android:textSize="11sp" />
+
+            <TextView
                 android:id="@+id/priceText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -233,9 +240,8 @@
                 android:textColor="#8E8BD8"
                 android:textSize="13sp"/>
 
-
             <TextView
-                android:id="@+id/deliveryText2"
+                android:id="@+id/deliveryText1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_above="@id/view4"
@@ -331,98 +337,38 @@
                 android:layout_width="90dp"
                 android:layout_height="3dp"
                 android:layout_above="@id/view5"
-                android:layout_marginStart="110dp"
+                android:layout_marginStart="213dp"
                 android:layout_marginTop="40dp"
-                android:layout_marginBottom="-36dp"
+                android:layout_marginBottom="-37dp"
                 android:background="#8E8BD8" />
 
             <View
                 android:id="@+id/view8"
                 android:layout_width="match_parent"
-                android:layout_height="102dp"
+                android:layout_height="700dp"
                 android:layout_below="@id/view7"
-                android:background="@color/white"
-                android:layout_marginBottom="5dp"/>
+                android:background="@color/white"/>
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="260dp"
+                android:layout_height="249dp"
+                android:layout_above="@id/view7"
+                android:layout_marginStart="75dp"
+                android:layout_marginBottom="-311dp"
+                android:src="@drawable/category_ad"/>
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="258dp"
-                android:layout_height="20dp"
-                android:layout_above="@id/view8"
-                android:layout_marginStart="25dp"
-                android:layout_marginBottom="-25dp"
-                android:text="96%가 만족한 상품이에요."
-                android:textColor="#FF000000" />
-
-            <Button
-                android:id="@+id/allReviewBtn"
-                android:layout_width="100dp"
-                android:layout_height="20dp"
-                android:layout_above="@id/view8"
-                android:layout_marginStart="300dp"
-                android:layout_marginBottom="-25dp"
-                android:background="#00ff0000"
-                android:textColor="#8E8BD8"
-                android:text="리뷰 전체 보기 >" />
-
-            <ImageView
-                android:id="@+id/review1"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_above="@id/view8"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="330dp"
-                android:layout_marginBottom="-100dp"
-                android:src="@drawable/category_ad"
-                />
-
-            <ImageView
-                android:id="@+id/review2"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_above="@id/view8"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="250dp"
-                android:layout_marginBottom="-100dp"
-                android:src="@drawable/category_ad"
-                />
-
-            <ImageView
-                android:id="@+id/review3"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_above="@id/view8"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="170dp"
-                android:layout_marginBottom="-100dp"
-                android:src="@drawable/category_ad"
-                />
-
-            <ImageView
-                android:id="@+id/review4"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_above="@id/view8"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="90dp"
-                android:layout_marginBottom="-100dp"
-                android:src="@drawable/category_ad"
-                />
-
-            <ImageView
-                android:id="@+id/review5"
-                android:layout_width="70dp"
-                android:layout_height="70dp"
-                android:layout_above="@id/view8"
-                android:layout_alignParentEnd="true"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="-100dp"
-                android:src="@drawable/category_ad"
-                />
+                android:layout_height="68dp"
+                android:layout_above="@id/view7"
+                android:layout_marginStart="90dp"
+                android:layout_marginBottom="-389dp"
+                android:text="옷 설명" />
 
         </RelativeLayout>
     </ScrollView>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
