로그아웃 추가, 로그인 후 유저 정보 계속 저장

--- a/app/src/main/res/layout/loginpage.xml
+++ b/app/src/main/res/layout/loginpage.xml
@@ -111,7 +111,7 @@
         tools:ignore="MissingConstraints" />
 
     <Button
-        android:id="@+id/back_btn"
+        android:id="@+id/btn_back"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentLeft="true"
