--- a/app/src/main/res/layout/detailpage_activity_main_ask.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_ask.xml
@@ -54,7 +54,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
+    <Button
         android:id="@+id/home_btn"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -71,7 +71,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
 
-    <View
+    <Button
         android:id="@+id/search_btn"
         android:layout_width="28dp"
         android:layout_height="23dp"
@@ -87,7 +87,7 @@
         app:layout_constraintStart_toStartOf="@+id/top_toorbar"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
+    <Button
         android:id="@+id/bag_btn"
         android:layout_width="22dp"
         android:layout_height="32dp"
