--- a/app/src/main/res/layout/detailpage_activity_main_review.xml
+++ b/app/src/main/res/layout/detailpage_activity_main_review.xml
@@ -55,7 +55,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
+    <Button
         android:id="@+id/home_btn"
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -73,7 +73,7 @@
         tools:ignore="MissingConstraints" />
 
 
-    <View
+    <Button
         android:id="@+id/search_btn"
         android:layout_width="28dp"
         android:layout_height="23dp"
@@ -89,7 +89,7 @@
         app:layout_constraintStart_toStartOf="@+id/top_toorbar"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <View
+    <Button
         android:id="@+id/bag_btn"
         android:layout_width="22dp"
         android:layout_height="32dp"
