로그아웃 버튼 위치 변경

--- a/app/src/main/res/layout/mypage_activity_main.xml
+++ b/app/src/main/res/layout/mypage_activity_main.xml
@@ -12,14 +12,14 @@
         android:id="@+id/btn_logout"
         android:layout_width="80dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="20dp"
-        android:background="@color/main"
+        android:layout_marginTop="122dp"
+        android:background="#00ff0000"
         android:text="logout"
-        android:textColor="@color/white"
+        android:textColor="@color/main"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.792"
+        app:layout_constraintStart_toEndOf="@+id/user_name"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
@@ -81,7 +81,7 @@
         android:id="@+id/btn_order_delivery_list"
         android:layout_width="411dp"
         android:layout_height="70dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="60dp"
         android:background="#00FF0000"
         android:gravity="left"
         android:paddingLeft="20dp"
