--- a/app/src/main/res/layout/mypage_activity_setting.xml
+++ b/app/src/main/res/layout/mypage_activity_setting.xml
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="60dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:text="이름"
         android:textColor="@color/black"
         android:textSize="18sp"
@@ -80,12 +80,12 @@
         tools:ignore="HardcodedText" />
 
     <TextView
-        android:id="@+id/name_view"
+        android:id="@+id/user_name_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginLeft="64dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:text=""
         android:textColor="@color/black"
         android:textSize="18sp"
