--- a/app/src/main/res/layout/seller_activity_mypage_main.xml
+++ b/app/src/main/res/layout/seller_activity_mypage_main.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="411dp"
-    android:layout_height="845dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:clipToOutline="true"
     android:orientation="vertical">
 
@@ -18,30 +18,6 @@
         android:background="@drawable/mypage_btn_setting"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.041"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/btn_mypage"
-        android:layout_width="100dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="132dp"
-        android:text="마이페이지"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.842"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-
-    <Button
-        android:id="@+id/btn_manager"
-        android:layout_width="100dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="68dp"
-        android:text="관리자"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.842"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -61,11 +37,27 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
+
+    <Button
+        android:id="@+id/btn_logout"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="122dp"
+        android:background="#00ff0000"
+        android:text="logout"
+        android:textColor="@color/main"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.792"
+        app:layout_constraintStart_toEndOf="@+id/seller_name"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
+
     <Button
         android:id="@+id/btn_product_list"
         android:layout_width="411dp"
         android:layout_height="70dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="12dp"
         android:background="#00FF0000"
         android:gravity="left"
         android:paddingLeft="20dp"
@@ -73,7 +65,6 @@
         android:text="물품 목록"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/seller_image"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -82,7 +73,7 @@
         android:id="@+id/btn_product_register"
         android:layout_width="411dp"
         android:layout_height="70dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:background="#00FF0000"
         android:gravity="left"
         android:paddingLeft="20dp"
@@ -90,7 +81,6 @@
         android:text="물품 등록 요청"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_product_list"
         tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
@@ -107,7 +97,6 @@
         android:text="물품 수정 요청"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_product_register"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -124,7 +113,6 @@
         android:text="물품 삭제"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_product_revise"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -143,12 +131,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/seller_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="140dp"
         android:layout_marginTop="125dp"
-        android:text="판매자"
+        android:text=""
         android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="24sp"
@@ -170,7 +158,6 @@
         android:text="주문/배송 내역"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_product_delete"
         tools:ignore="HardcodedText,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
@@ -187,7 +174,6 @@
         android:text="환불/교환 내역"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_order_delivery_list"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
@@ -204,7 +190,6 @@
         android:text="후기 내역"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_refund_exchange_list"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
